apps/utilities/bentopdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  namespace: utilities
  labels:
    app: bentopdf
    tier: utilities
spec:
  selector:
    matchLabels:
      app: bentopdf
      tier: utilities
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bentopdf
        tier: utilities
    spec:
      containers:
        - name: bentopdf
          image: bentopdf/bentopdf:1.15.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
